# deeplearning-course

./: .gitignore  dev.ipynb  download_data.py  env.yml  linear-regression.ipynb  pyproject.toml
exercices/: 2 layer NN.ipynb  linear-regression.ipynb
exercices/1-Logistic-regression/: LR-Charles.ipynb  LR-OOP-solution.ipynb  LR-OOP.ipynb  LR-solution.ipynb  LR.ipynb
exercices/1-Logistic-regression/ref/: dl.ai-LR-with-NN-mindset.ipynb
exercices/2-one-hidden-layer-NN/: 1HL-solution.ipynb  1HL.ipynb
exercices/2-one-hidden-layer-NN/ref/: Planar_data_classification_with_onehidden_layer_v6c.ipynb
exercices/3-multi-layer-perceptron/: MLP-OOP.ipynb  MLP-solution.ipynb  MLP_OOP.py  catset.py
exercices/3-multi-layer-perceptron/ref/Building your Deep Neural Network - Step by Step/: Building_your_Deep_Neural_Network_Step_by_Step_v8a.ipynb
exercices/3-multi-layer-perceptron/ref/Deep Neural Network Application_ Image Classification/: Deep Neural Network - Application v8.ipynb
exercices/z-to-order/: linear-regression-1.ipynb
z-to-order/ds-moocs/coursera-ml/: C1_W2_Lab01_Linear_Regression.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W2_Lab04_FeatEng_PolyReg_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab02_Sigmoid_function_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb
