[tool.poetry]
name = "dl-course"
version = "0.1.0"
description = ""
authors = ["Selim Raboudi <selim.raboudi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
torchvision = "^0.13.1"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
